Complete the shared memory and compare the string.
Do with it parallel by fork() and using shared memory to implement.

--- a/Multiprocess/Hw3/Makefile
+++ b/Multiprocess/Hw3/Makefile
@@ -4,3 +4,7 @@ Hw3.o : Hw3.c fetchString.h
 	gcc -c Hw3.c
 fetchString.o : fetchString.c fetchString.h
 	gcc -c fetchString.c
+
+run:
+	./Hw3 input.txt "oslab2015" 3
+
