--- a/Pthread Implementation/Makefile
+++ b/Pthread Implementation/Makefile
@@ -1,6 +1,6 @@
 MatrixMutiply: matrix_multiply.c
 	gcc -g -Wall -o MatrixMultiply matrix_multiply.c -lpthread
 run:
-	./MatrixMultiply 4 input.txt
+	./MatrixMultiply input.txt
 test:
-	./MatrixMultiply 8 input_test.txt
+	./MatrixMultiply input_test.txt
