--- a/FileSystem/Makefile
+++ b/FileSystem/Makefile
@@ -1,13 +1,20 @@
-hw5:main.o myfile.o myshell.o
-	gcc -o hw5 main.o myfile.o myshell.o
-main.o:main.c myshell.h
-	gcc -c main.c
+CFLAGS = -L. 
+LIB = libmyfs.a
+OBJS = myfile.o myshell.o
+
+$(LIB):$(OBJS)
+	@ar rcs $(LIB) $(OBJS)
+lib:$(LIB)
+
 myfile.o:myfile.c myfile.h
 	gcc -c myfile.c
 myshell.o:myshell.c myshell.h
 	gcc -c  myshell.c
 
+hw5:$(LIB)
+	gcc -o hw5 main.c -lmyfs $(CFLAGS)
+
 run:
-	./hw5 
+	hw5 
 clean:
-	rm main.o myfile.o myshell.o hw5 myshell.c~ myshell.h~ myfile.c~ myfile.h~ main.c~ Makefile~ kevin~
+	rm $(OBJS) $(LIB) hw5 myshell.c~ myshell.h~ myfile.c~ myfile.h~ main.c~ Makefile~ kevin~
