Upload the README and revise the Makefile.
Revise makefile to get the lib. package.

--- a/FileSystem/Makefile
+++ b/FileSystem/Makefile
@@ -10,11 +10,9 @@ myfile.o:myfile.c myfile.h
 	gcc -c myfile.c
 myshell.o:myshell.c myshell.h
 	gcc -c  myshell.c
-
-hw5:$(LIB)
-	gcc -o hw5 main.c -lmyfs $(CFLAGS)
-
+myfs:$(LIB)
+	gcc -o myfs main.c -lmyfs $(CFLAGS)
 run:
-	hw5 
+	./myfs 
 clean:
 	rm $(OBJS) $(LIB) hw5 myshell.c~ myshell.h~ myfile.c~ myfile.h~ main.c~ Makefile~ kevin~
